Bug 244969 - Price editor dialog sort by date not correct
Summary: Price editor dialog sort by date not correct
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-17 19:07 UTC by David Houlden
Modified: 2010-07-19 01:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-07-17 19:07:08 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

Using SVN 1151050

I am trying to sort the entries in the Price Editor dialog by date. Kmymoney seems to treat the date as a character field when sorting instead of taking into account the date format.

Reproducible: Always
Comment 1 Alvaro Soliverez 2010-07-19 01:51:50 UTC
SVN commit 1151374 by asoliverez:

Fixed sorting of non-text columns of the prices list

BUG:244969

 M  +19 -15    dialogs/kmymoneypricedlg.cpp  
 M  +0 -2      dialogs/kmymoneypricedlg.h  
 M  +1 -0      widgets/CMakeLists.txt  
 A             widgets/kpricetreeitem.cpp   [License: GPL (v2+)]
 A             widgets/kpricetreeitem.h   [License: GPL (v2+)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=1151374