Fixed sorting of non-text columns of the prices list

BUG:244969

svn path=/trunk/extragear/office/kmymoney/; revision=1151374